# statumen

./: .gitignore  Cargo.toml  README.md  architecture.md
.github/workflows/: ci.yml
benches/: decode_throughput.rs  openslide_parity.rs  read_paths.rs  wsi_pipeline.rs
docs/: architecture.md
src/: lib.rs
src/core/: decode_runtime.rs  registry.rs  types.rs
src/decode/: jp2k.rs  jpeg.rs
src/formats/: dicom.rs  hamamatsu_vms.rs  mirax.rs  mod.rs  svcache.rs  zeiss.rs
src/formats/dicom/: image.rs  manifest.rs  tests.rs
src/formats/tiff_family/: pixel_access.rs
src/formats/tiff_family/layout/: ndpi.rs
src/formats/tiff_family/pixel_access/: caches.rs  reader.rs  tests.rs
src/output/: metal.rs
statumen-openslide-shim/: Cargo.toml
statumen-openslide-shim/src/: handle.rs  install.rs  lib.rs
statumen-openslide-shim/tests/: abi_contract.rs
tests/: color_regression.rs  dicom_parity.rs  openslide_compare.rs  openslide_parity.rs  openslide_test_support.rs  real_wsi_behavior.rs  repo_integrity.rs  signinum_parity.rs  support_unit.rs  zeiss_czi.rs  zeiss_zvi.rs
tests/support/: compare.rs  corpus.rs  openslide_shim.rs  oracles.rs
